--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -224,7 +224,7 @@
 %       update, cycle-free heap.
 %     \end{rentry}
 %  \end{rsection}
-\vspace{1.0em}
+
 \begin{rsection}{In Submission}
    \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
    A. Krishnamurthy. \textit{Building Consistent Transactions with
@@ -268,18 +268,18 @@
     M. F. Kaashoek, R. Morris. \textit{Flexible, Wide-Area Storage for
       Distributed Systems with WheelFS.} In Proc. of NSDI '09. Boston,
     MA. April 2009.
- \vspace{1.0em}
- \end{rsection}
+    \vspace{1.0em}
+  \end{rsection}
 
   \begin{rsection}{Posters \&\\Extended\\Abstracts}
-   \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
-   A. Krishnamurthy. \textit{Optimistic, Replicated Two-Phase Commit.}
-   Poster at APSys '14. Beijing, China. June 2014.\\\vspace{-0.5em}
+    \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
+    A. Krishnamurthy. \textit{Optimistic, Replicated Two-Phase Commit.}
+    Poster at APSys '14. Beijing, China. June 2014.\\\vspace{-0.5em}
 
     \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
-   A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
-     Deployment for Mobile/Cloud Applications.} Work-in-Progress talk
-   at SOSP '13. Farmington, PA. November 2013.\\\vspace{-0.5em}
+    A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
+      Deployment for Mobile/Cloud Applications.} Work-in-Progress talk
+    at SOSP '13. Farmington, PA. November 2013.\\\vspace{-0.5em}
 
     \textbf{I. Zhang}, A. Garthwaite, Y. Baskakov, K. C. Barr, J. Pool,
     K. Christopher. \textit{Fast Restore of Checkpointed Memory Using
@@ -291,7 +291,7 @@
     NV. September 2008.
   \end{rsection}
 
-  \vspace{1.0em}
+
   \begin{rsection}{Patents}
     US Patent App. 12/559,484.\\
     Saving and Restoring State Information for Virtualized Computer Systems.\\
@@ -310,17 +310,15 @@
     J. Pool.
   \end{rsection}
 
-  % \begin{rsection}{Talks}
-  %   Saving and Restoring State Information for Virtualized Computer Systems.
-  %   \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.
-  %   US Patent App. 12/559,484.
-  % \end{rsection}
-
 \end{rtable}
 
 \begin{rtable}
-  \vspace{1.0em}
-  \begin{rsection}{Honors and\\Awards}
+
+  \begin{rsection}{Talks}
+    
+  \end{rsection}
+
+  \begin{rsection}{Honors \&\\Awards}
     \begin{rentry}{National Science Board Annual Board Meeting Student
         Panel}{2013}
     \end{rentry} \vspace{-0.5em}
@@ -341,45 +339,81 @@
       Mention}{2008}
     \end{rentry} \vspace{-0.5em}
 
-    \begin{rentry}{Officer, Eta Kappa Nu EECS Honor Society}{2008}
-    \end{rentry} \vspace{-0.5em}
-
     \begin{rentry}{Northern Telecom/BNR Award for Best Undergrad. Lab Project}{2006}
     \end{rentry}
   \end{rsection}
 
+  \vspace{1.0em}
+  \begin{rsection}{Service}
+    \begin{rentry}{UW Conference on Potentially
+        Computer Science (PoCSci)}{}
+      \rline{Program Co-chair}{2015}
+    \end{rentry} \vspace{-0.5em}
 
+    \begin{rentry}{UW Graduate Student Committee}{}
+      \rline{Graduate Women's Event Coordinator}{2014-2015}
+      \rline{Graduate Visit Days Committee Co-chair}{2013-2014}
+    \end{rentry} \vspace{-0.5em}
+
+    \begin{rentry}{Graduate Student Mentor}{2013-2014}
+    \end{rentry} \vspace{-0.5em}
+
+    \begin{rentry}{VMware Women's Outreach and Recruiting}{2009-2012}
+    \end{rentry} \vspace{-0.5em}
+
+    \begin{rentry}{Eta Kappa Nu EECS Honor Society}{}
+      \rline{Officer}{2008-2009}
+    \end{rentry}
+  \end{rsection}
+
+\end{rtable}
+
+\begin{rtable}
   \begin{rsection}{Teaching}
-    \begin{rentry}{Operating Systems Engineering (6.828)}{Sept - Dec
-        2008}
-      \rline{Teaching Assistant, MIT Department of EECS}{} 
-      Developed and graded labs assignments where students build an
-      exokernel-style OS. Held weekly office hours to help students
-      with labs and OS fundamentals like virtual memory management,
-      interrupt handlers and process management.
+
+    \begin{rentry}{Introduction to Operating Systems (CSE 451)}{}
+      \rline{Tutor, UW Department of CSE}{Fall 2014}
+      \rline{Tutor, UW Department of CSE}{Spring 2014}
+      \rline{Tutor, UW Department of CSE}{Fall 2013}
+    \end{rentry}
+
+    \begin{rentry}{The Hardware/Software Interface (CSE 351)}{}
+      \rline{Tutor, UW Department of CSE}{Winter 2014}
+      \rline{Tutor, UW Department of CSE}{Winter 2013}
+    \end{rentry}
+
+    \begin{rentry}{Operating Systems Engineering (6.828)}{}
+      \rline{Teaching Assistant, MIT Department of EECS}{Fall
+        2008} 
+      % Developed and graded labs assignments where students build an
+      % exokernel-style OS. Held weekly office hours to help students
+      % with labs and OS fundamentals like virtual memory management,
+      % interrupt handlers and process management.
     \end{rentry}    
 
-    \begin{rentry}{Intro. to Digital Systems Lab (6.111)}{Jan - May
-        2008}
-      \rline{Teaching Assistant, MIT Department of EECS}{} 
-      Taught weekly recitations and helped students with labs using
-      FPGAs and Verilog. Helped students design and implement complex
-      final projects such as 3D object tracking. Received student
-      evaluation of 6.3/7.0, one of the highest ratings in the last 5
-      years.
+    \begin{rentry}{Intro. to Digital Systems Lab (6.111)}{}
+      \rline{Teaching Assistant, MIT Department of EECS}{Spring
+        2008} 
+      % Taught weekly recitations and helped students with labs using
+      % FPGAs and Verilog. Helped students design and implement complex
+      % final projects such as 3D object tracking. Received student
+      % evaluation of 6.3/7.0, one of the highest ratings in the last 5
+      % years.
     \end{rentry}    
 
-    \begin{rentry}{Computation Structures (6.004)}{Jan - Dec 2007}
-      \rline{Lab Assistant, MIT Department of EECS}{} Held office
-      hours to help students design and build a processor and small OS
-      kernel in simulation.
+    \begin{rentry}{Computation Structures (6.004)}{}
+      \rline{Lab Assistant, MIT Department of EECS}{Spring 2007}
+% Held office
+%       hours to help students design and build a processor and small OS
+%       kernel in simulation.
     \end{rentry}
 
     \begin{rentry}{Intro. to Computer Science and
-        Programming (6.00)}{Sept - Dec 2006}
-      \rline{Lab Assistant, MIT Department of EECS}{} Taught students
-      basic computer science concepts such as recursion, abstraction
-      and OOP.
+        Programming (6.00)}{}
+      \rline{Lab Assistant, MIT Department of EECS}{Fall 2006}
+ % Taught students
+ %      basic computer science concepts such as recursion, abstraction
+ %      and OOP.
     \end{rentry}
   \end{rsection}
 
