--- a/404.md
+++ b/404.md
@@ -6,7 +6,6 @@ Sorry! The server can't find that page.
 
 Please consider trying to find what you need from [the home page][home].
 
-If you think something might be broken, please send an email to [Adrian][].
+If you think something might be broken, please send an email to [me](mailto:bugs@schemeprincess.com).
 
 [home]: {{ site.base }}/
-[adrian]: https://homes.cs.washington.edu/~asampson/
