--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -226,72 +226,87 @@
 %  \end{rsection}
 
 \begin{rsection}{In Submission}
-   \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
-   A. Krishnamurthy. \textit{Building Consistent Transactions with
-     Inconsistent Replication.}\\\vspace{-0.5em}
+  \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+  R. K. Ports,
+  Arvind Krishnamurthy. \textit{Building Consistent Transactions with Inconsistent
+    Replication.}\\
 
-   A. Szekeres, \textbf{I. Zhang}, I. Ackerman, F. Roesner,
-   D. R. K. Ports, A. Krishnamurthy, H. Levy. \textit{User-controlled
+   Adriana Szekeres, \textbf{Irene Zhang}, Isaac Ackerman, Franziska Roesner,
+   Dan R. K. Ports, Arvind Krishnamurthy, Henry M. Levy. \textit{User-controlled
      Privacy: Enforcing Privacy Policies on Mobile/Cloud
-     Applications.}\\\vspace{-0.5em}
+     Applications.}\\
 \end{rsection}
   
  \begin{rsection}{Conference\\Publications}
-   \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
-   A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
-     Deployment for Mobile/Cloud Applications.} In Proc. of OSDI '14.\\\vspace{-0.5em}
+   \textbf{Irene Zhang}, Adriana Szekeres, Dana Van Aken, Isaac
+   Ackerman, Steven D. Gribble, Arvind Krishnamurthy, Henry
+   M. Levy. \textit{Customizable and Extensible Deployment for
+     Mobile/Cloud Applications.}  In Proceedings of the USENIX Symposium
+   on Operating Systems Design and
+   Implementation (OSDI). Broomfield, CO. October 2014.\\
 
-   S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, A. Krishnamurthy,
-   T. Anderson, T. Roscoe. \textit{Arrakis: The Operating System is
-     the Control Plane.} In Proc. of OSDI '14. \textbf{Best Paper Award}.\\\vspace{-0.5em}
+   Simon Peter, Jialin Li, \textbf{I. Zhang}, Dan R. K. Ports, Doug
+   Woos, Arvind Krishnamurthy, Thomas Anderson, Timothy Roscoe.
+   \textit{Arrakis: The Operating System is the Control Plane.}  In
+   Proceedings of the USENIX Symposium on Operating Systems Design and
+   Implementation (OSDI).
+   Broomfield, CO. October 2014. \textbf{Best Paper
+     Award}.\\
 
-   S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, T. Anderson,
-   A. Krishnamurthy, M. Zbikowski. \textit{Towards High-Performance
-     Application-Level Storage Management.} In Proc. of HotStorage
-   '14. \\\vspace{-0.5em}
+   \textbf{Irene Zhang}, Tyler Denniston, Yury Baskakov, Alex
+   Garthwaite.   \textit{Optimizing VM Checkpointing for Restore
+     Performance in VMware ESXi.}
+   In Proceedings of the USENIX Annual Technical Conference (USENIX ATC).
+   San Jose, CA. June 2013.\\
 
-    \textbf{I. Zhang}, T. Denniston, Y. Baskakov, A. Garthwaite. \textit{Optimizing
-      VM Checkpointing for Restore Performance in VMware ESXi.} In
-    Proc. of USENIX ATC '13. San Jose, CA. June 2013.\\\vspace{-0.5em}
+   \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
+   C. Barr. \textit{Fast Restore of Checkpointed Memory Using Working
+     Set Estimation.}  In Proceedings of the ACM International Conference
+   on Virtual Execution Environments
+   (VEE). Newport Beach, CA. March 2011.\\
 
-    \textbf{I. Zhang}, A. Garthwaite, Y. Baskakov, K. C. Barr. \textit{Fast
-      Restore of Checkpointed Memory Using Working Set
-      Estimation.} In Proc. of VEE '11. Newport Beach, CA. March
-    2011.\\\vspace{-0.5em}
+   Dan R. K. Ports, Austin Clements, \textbf{Irene Zhang}, Samuel
+   Madden, Barbara Liskov. \textit{Transactional Consistency and
+     Automatic Management in an Application Data Cache.}  In
+   Proceedings of the USENIX Symposium on Operating Systems Design and
+   Implementation (OSDI). Vancouver, Canada. October 2010.\\
 
-    D. R. K. Ports, A. Clements, \textbf{I. Zhang}, S. Madden,
-    B. Liskov. \textit{Transactional Consistency and Automatic
-      Management in an Application Data Cache.} In Proc. of OSDI
-    '10. Vancouver, Canada. October 2010.\\\vspace{-0.5em}
+   Jeremy Stribling, Yair Sovran, \textbf{Irene Zhang}, Xavid Pretzer,
+   Jinyang Li, M. Frans Kaashoek, Robert Morris. \textit{Flexible,
+     Wide-Area Storage for Distributed Systems with WheelFS.}  In
+   Proceedings of the USENIX Symposium on Networked Systems Design and
+   Implementation (NSDI).  Boston, MA. April 2009.  \vspace{1.0em}
+  \end{rsection}
 
-    J. Stribling, Y. Sovran, \textbf{I. Zhang}, X. Pretzer, J. Li,
-    M. F. Kaashoek, R. Morris. \textit{Flexible, Wide-Area Storage for
-      Distributed Systems with WheelFS.} In Proc. of NSDI '09. Boston,
-    MA. April 2009.
-    \vspace{1.0em}
+  \begin{rsection}{Workshop Publications}
+    Simon Peter, Jialin Li, Doug Woos, \textbf{Irene Zhang}, Dan
+    R. K. Ports, Thomas Anderson, Arvind Krishnamurthy, Mark
+    Zbikowski. \textit{Towards High-Performance Application-Level
+      Storage Management.} In Proceedings of the
+    USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014. \\
   \end{rsection}
 
   \begin{rsection}{Posters \&\\Extended\\Abstracts}
-    \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
-    A. Krishnamurthy. \textit{Optimistic, Replicated Two-Phase Commit.}
-    Poster at APSys '14. Beijing, China. June 2014.\\\vspace{-0.5em}
+    \textbf{Irene Zhang}, Naveen K. Sharma, Adriana Szekeres, Dan
+    R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
+      Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\
 
-    \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
-    A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
-      Deployment for Mobile/Cloud Applications.} Work-in-Progress talk
-    at SOSP '13. Farmington, PA. November 2013.\\\vspace{-0.5em}
+    \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
+    C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
+      Checkpointed Memory Using Working Set Estimation.} ACM Symposium
+    on Operating System Principles (SOSP).  Big Sky, MT. October
+    2009.\\
 
-    \textbf{I. Zhang}, A. Garthwaite, Y. Baskakov, K. C. Barr, J. Pool,
-    K. Christopher. \textit{Fast Restore of Checkpointed Memory Using
-      Working Set Estimation.} Poster at SOSP '09. Big Sky,
-    MT. October 2009.\\\vspace{-0.5em} 
-
-   \textbf{I. Zhang}, K. C. Barr. \textit{Improving VMware Workstation Restore
-      using Working Set Estimation.} Poster at VMworld '08. Las Vegas,
-    NV. September 2008.
+    \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
+      Workstation Restore using Working Set Estimation.}  VMworld
+    Conference. Las Vegas, NV. September 2008.
   \end{rsection}
 
 
+
+\end{rtable}
+
+\begin{rtable}
   \begin{rsection}{Patents}
     US Patent App. 12/559,484.\\
     Saving and Restoring State Information for Virtualized Computer Systems.\\
@@ -310,16 +325,14 @@
     J. Pool.
   \end{rsection}
 
-\end{rtable}
-
-\begin{rtable}
-
-  \begin{rsection}{Talks}
-    
-  \end{rsection}
-
   \begin{rsection}{Honors \&\\Awards}
-    \begin{rentry}{National Science Board Annual Board Meeting Student
+    \begin{rentry}{Industrial Affiliates Madrona Prize}{2014}
+    \end{rentry} \vspace{-0.5em}
+
+    \begin{rentry}{OSDI Best Paper Award}{2014}
+    \end{rentry} \vspace{-0.5em}
+
+    \begin{rentry}{National Science Board Annual Meeting Student
         Panel}{2013}
     \end{rentry} \vspace{-0.5em}
 
@@ -339,11 +352,48 @@
       Mention}{2008}
     \end{rentry} \vspace{-0.5em}
 
-    \begin{rentry}{Northern Telecom/BNR Award for Best Undergrad. Lab Project}{2006}
+    \begin{rentry}{Northern Telecom/BNR Award for Best Undergrad. Lab
+        Project}{2006}
     \end{rentry}
   \end{rsection}
 
-  \vspace{1.0em}
+  \begin{rsection}{Talks}
+    \begin{rentry}{Building Consistent Transactions with Inconsistent
+        Replication}{}
+      \rline{Amazon Tech Talk, Host: Andrew Certain}{Nov 2014}
+    \end{rentry}
+
+    \begin{rentry}{Customizable and Extensible Deployment for
+        Mobile/Cloud Applications}{}
+      \rline{MSR Systems Seminar, Host: Phil Bernstein}{Nov 2014}
+      \rline{UW CSE Industrial Affiliates Meeting}{Oct 2014}
+      \rline{Symposium on Operating Systems Design and
+        Implementation (OSDI)}{Oct 2014}
+      \rline{Syposium on Operating Systems Principles (SOSP) Work-in-Progress}{Nov 2013}
+      \rline{UW/MSR Research Day}{Apr 2013}
+    \end{rentry}
+
+    \begin{rentry}{Optimizing VM Checkpointing for Restore Performance
+      in VMware ESXi}{}
+      \rline{USENIX Annual Technical Conference (ATC)}{Jun 2013}
+    \end{rentry}
+
+    \begin{rentry}{Fast Restore of Checkpointed Memory using Working
+        Set Estimation}{}
+      \rline{University of Washington Technical Talk}{Oct 2011}
+      \rline{Cornell SWE Technical Talk}{Sep 2011}
+      \rline{Conference on Virtual Execution Environments (VEE)}{Mar 2011}
+    \end{rentry}
+  \end{rsection}
+
+  \begin{rsection}{Press}
+    \textit{Cutting-edge server operating system wins UW computer
+      science prize.} \\GeekWire. October 23, 2014.
+  \end{rsection}
+
+\end{rtable}
+
+\begin{rtable}
   \begin{rsection}{Service}
     \begin{rentry}{UW Conference on Potentially
         Computer Science (PoCSci)}{}
@@ -355,7 +405,7 @@
       \rline{Graduate Visit Days Committee Co-chair}{2013-2014}
     \end{rentry} \vspace{-0.5em}
 
-    \begin{rentry}{Graduate Student Mentor}{2013-2014}
+    \begin{rentry}{UW Graduate Student Mentor}{2013-2014}
     \end{rentry} \vspace{-0.5em}
 
     \begin{rentry}{VMware Women's Outreach and Recruiting}{2009-2012}
@@ -366,15 +416,12 @@
     \end{rentry}
   \end{rsection}
 
-\end{rtable}
-
-\begin{rtable}
   \begin{rsection}{Teaching}
-
     \begin{rentry}{Introduction to Operating Systems (CSE 451)}{}
       \rline{Tutor, UW Department of CSE}{Fall 2014}
       \rline{Tutor, UW Department of CSE}{Spring 2014}
-      \rline{Tutor, UW Department of CSE}{Fall 2013}
+      \rline{Guest Lecturer, UW Department of CSE}{Fall 2013}
+      \rline{Tutor, UW Department of CSE}{Spring 2013}
     \end{rentry}
 
     \begin{rentry}{The Hardware/Software Interface (CSE 351)}{}
@@ -417,7 +464,6 @@
     \end{rentry}
   \end{rsection}
 
-  \vspace{1.0em}
   \begin{rsection}{Work\\Experience}
     \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
       \rline{MTS, Virtual Machine Monitor
