--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -294,7 +294,7 @@
     \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
     C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
       Checkpointed Memory Using Working Set Estimation.} ACM Symposium
-    on Operating System Principles (SOSP).  Big Sky, MT. October
+    on Operating Systems Principles (SOSP).  Big Sky, MT. October
     2009.\\
 
     \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
