updates to CV to add talks

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -245,7 +245,7 @@
    on Operating Systems Design and
    Implementation (OSDI). Broomfield, CO. October 2014.\\
 
-   Simon Peter, Jialin Li, \textbf{I. Zhang}, Dan R. K. Ports, Doug
+   Simon Peter, Jialin Li, \textbf{Irene Zhang}, Dan R. K. Ports, Doug
    Woos, Arvind Krishnamurthy, Thomas Anderson, Timothy Roscoe.
    \textit{Arrakis: The Operating System is the Control Plane.}  In
    Proceedings of the USENIX Symposium on Operating Systems Design and
@@ -261,9 +261,8 @@
 
    \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
    C. Barr. \textit{Fast Restore of Checkpointed Memory Using Working
-     Set Estimation.}  In Proceedings of the ACM International Conference
-   on Virtual Execution Environments
-   (VEE). Newport Beach, CA. March 2011.\\
+     Set Estimation.}  In Proceedings of the ACM Conference on Virtual
+   Execution Environments (VEE). Newport Beach, CA. March 2011.\\
 
    Dan R. K. Ports, Austin Clements, \textbf{Irene Zhang}, Samuel
    Madden, Barbara Liskov. \textit{Transactional Consistency and
@@ -287,7 +286,7 @@
   \end{rsection}
 
   \begin{rsection}{Posters \&\\Extended\\Abstracts}
-    \textbf{Irene Zhang}, Naveen K. Sharma, Adriana Szekeres, Dan
+    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
     R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
       Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\
 
@@ -322,7 +321,7 @@
     Method for Restoring Virtual Machine State from a Checkpoint
     File.\\
     A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
-    J. Pool.
+    J. Pool.\\
   \end{rsection}
 
   \begin{rsection}{Honors \&\\Awards}
@@ -369,13 +368,14 @@
       \rline{UW CSE Industrial Affiliates Meeting}{Oct 2014}
       \rline{Symposium on Operating Systems Design and
         Implementation (OSDI)}{Oct 2014}
-      \rline{Syposium on Operating Systems Principles (SOSP) Work-in-Progress}{Nov 2013}
+      \rline{UW Systems Seminar}{Oct 2014}
+      \rline{Symposium on Operating Systems Principles (SOSP) Work-in-Progress}{Nov 2013}
       \rline{UW/MSR Research Day}{Apr 2013}
     \end{rentry}
 
     \begin{rentry}{Optimizing VM Checkpointing for Restore Performance
-      in VMware ESXi}{}
-      \rline{USENIX Annual Technical Conference (ATC)}{Jun 2013}
+      in VMware ESXi}{} 
+      \rline{USENIX Annual Technical Conference (USENIX ATC)}{Jun 2013}
     \end{rentry}
 
     \begin{rentry}{Fast Restore of Checkpointed Memory using Working
@@ -388,7 +388,10 @@
 
   \begin{rsection}{Press}
     \textit{Cutting-edge server operating system wins UW computer
-      science prize.} \\GeekWire. October 23, 2014.
+      science prize.} GeekWire. October 23, 2014.\\
+    
+    \textit{Faster websites, more reliable data.}
+    MIT News. October 14, 2010.
   \end{rsection}
 
 \end{rtable}
