adding some papers

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -40,6 +40,7 @@
   booktitle =  osdi,
   year = 	 2014,
   month = 10,
+  url={papers/arrakis-osdi14.pdf},
   abstract = {Recent device hardware trends enable a new approach to
                   the design of network server operating systems. In a
                   traditional operating system, the kernel mediates
