changing some formatting and updating my CV

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -364,7 +364,7 @@
 
     \begin{rentry}{Customizable and Extensible Deployment for
         Mobile/Cloud Applications}{}
-      \rline{MSR Systems Seminar, Host: Phil Bernstein}{Nov 2014}
+      \rline{MSR Tech Talk, Host: Phil Bernstein}{Nov 2014}
       \rline{UW CSE Industrial Affiliates Meeting}{Oct 2014}
       \rline{Symposium on Operating Systems Design and
         Implementation (OSDI)}{Oct 2014}
@@ -380,8 +380,8 @@
 
     \begin{rentry}{Fast Restore of Checkpointed Memory using Working
         Set Estimation}{}
-      \rline{University of Washington Technical Talk}{Oct 2011}
-      \rline{Cornell SWE Technical Talk}{Sep 2011}
+      \rline{University of Washington Tech Talk}{Oct 2011}
+      \rline{Cornell SWE Tech Talk}{Sep 2011}
       \rline{Conference on Virtual Execution Environments (VEE)}{Mar 2011}
     \end{rentry}
   \end{rsection}
