--- a/_posts/2014-11-19-code.md
+++ b/_posts/2014-11-19-code.md
@@ -6,4 +6,4 @@ shortnews: true
 Just posted the Sapphire code to
 [GitHub](https://github.com/iyzhang). Check out my code projects,
 including a general-purpose [template webpage for lazy CS
-researchers](https://github.com/iyzhang/template-www).
+researchers](https://github.com/iyzhang/template-www) based on mine.
