fixing one of my blog posts

--- a/_posts/2014-10-08-osdi.md
+++ b/_posts/2014-10-08-osdi.md
@@ -6,4 +6,4 @@ shortnews: true
 The systems lab girls take OSDI 2014!
 
 
-![Systems lab girls]({{ base.url }}/img/syslab-girls-osdi.JPG)
+![Systems lab girls]({{ site.base }}/img/syslab-girls-osdi.JPG)
