Adding a teaching page and updating my cv

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -204,11 +204,8 @@
     %   keywords embedded in the pathname. My thesis work focused on
     %   adding support for efficient file distribution to WheelFS for
     %   distributing large files and handling flash crowds.
-    % \end{rentry}        
-  \end{rsection}
-\end{rtable}
+    % \end{rentry}
 
-\begin{rtable}
   %\vspace{1.0em}
 %   \begin{rsection}{}
 %     \begin{rentry}{Fresh Breeze Multiprocessor Architecture}{}
@@ -224,19 +221,11 @@
 %       update, cycle-free heap.
 %     \end{rentry}
 %  \end{rsection}
+        
+  \end{rsection}
+\end{rtable}
 
-\begin{rsection}{In Submission}
-  \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-  R. K. Ports,
-  Arvind Krishnamurthy. \textit{Building Consistent Transactions with Inconsistent
-    Replication.}\\
-
-   Adriana Szekeres, \textbf{Irene Zhang}, Isaac Ackerman, Franziska Roesner,
-   Dan R. K. Ports, Arvind Krishnamurthy, Henry M. Levy. \textit{User-controlled
-     Privacy: Enforcing Privacy Policies on Mobile/Cloud
-     Applications.}\\
-\end{rsection}
-  
+\begin{rtable}
  \begin{rsection}{Conference\\Publications}
    \textbf{Irene Zhang}, Adriana Szekeres, Dana Van Aken, Isaac
    Ackerman, Steven D. Gribble, Arvind Krishnamurthy, Henry
@@ -277,6 +266,18 @@
    Implementation (NSDI).  Boston, MA. April 2009.  \vspace{1.0em}
   \end{rsection}
 
+  \begin{rsection}{In Submission}
+    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+    R. K. Ports,
+    Arvind Krishnamurthy. \textit{Building Consistent Transactions with Inconsistent
+      Replication.}\\
+    
+    Adriana Szekeres, \textbf{Irene Zhang}, Isaac Ackerman, Franziska Roesner,
+    Dan R. K. Ports, Arvind Krishnamurthy, Henry M. Levy. \textit{User-controlled
+      Privacy: Enforcing Privacy Policies on Mobile/Cloud
+      Applications.}\\
+  \end{rsection}
+  
   \begin{rsection}{Workshop Publications}
     Simon Peter, Jialin Li, Doug Woos, \textbf{Irene Zhang}, Dan
     R. K. Ports, Thomas Anderson, Arvind Krishnamurthy, Mark
@@ -300,9 +301,6 @@
       Workstation Restore using Working Set Estimation.}  VMworld
     Conference. Las Vegas, NV. September 2008.
   \end{rsection}
-
-
-
 \end{rtable}
 
 \begin{rtable}
@@ -357,6 +355,10 @@
   \end{rsection}
 
   \begin{rsection}{Talks}
+    \begin{rentry}{Operating Systems for Modern Applications}{}
+      \rline{CSE Symposium}{Jan 2015}
+    \end{rentry}
+
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{}
       \rline{Amazon Tech Talk, Host: Andrew Certain}{Nov 2014}
@@ -386,6 +388,9 @@
     \end{rentry}
   \end{rsection}
 
+\end{rtable}
+
+\begin{rtable}
   \begin{rsection}{Press}
     \textit{Cutting-edge server operating system wins UW computer
       science prize.} GeekWire. October 23, 2014.\\
@@ -394,9 +399,6 @@
     MIT News. October 14, 2010.
   \end{rsection}
 
-\end{rtable}
-
-\begin{rtable}
   \begin{rsection}{Service}
     \begin{rentry}{UW Conference on Potentially
         Computer Science (PoCSci)}{}
@@ -414,12 +416,15 @@
     \begin{rentry}{VMware Women's Outreach and Recruiting}{2009-2012}
     \end{rentry} \vspace{-0.5em}
 
-    \begin{rentry}{Eta Kappa Nu EECS Honor Society}{}
-      \rline{Officer}{2008-2009}
+    \begin{rentry}{Eta Kappa Nu EECS Honor Society Officer}{2008-2009}
     \end{rentry}
   \end{rsection}
 
   \begin{rsection}{Teaching}
+    \begin{rentry}{Distributed Systems (CSE 452)}{}
+      \rline{Teaching Assistant, UW Department of CSE}{Winter
+        2015}      
+    \end{rentry}
     \begin{rentry}{Introduction to Operating Systems (CSE 451)}{}
       \rline{Tutor, UW Department of CSE}{Fall 2014}
       \rline{Tutor, UW Department of CSE}{Spring 2014}
@@ -466,7 +471,10 @@
  %      and OOP.
     \end{rentry}
   \end{rsection}
+\end{rtable}
 
+\begin{rtable}
+  \vspace{1.0em}
   \begin{rsection}{Work\\Experience}
     \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
       \rline{MTS, Virtual Machine Monitor
@@ -498,25 +506,5 @@
       \vspace{-.5em}
     \end{rentry}
   \end{rsection}
-
 \end{rtable}
-
-% \begin{rtable}
-%   \vspace{1.0em}
-%   \begin{rsection}{Service}
-%     \begin{rentry}{UW Visit Days 2014}{}
-%       Organized and ran the Visit Days for PhD students in the
-%       Computer Science and Engineering Department.
-%     \end{rentry}    
-
-%     \begin{rentry}{UW Graduate Student Mentor 2014}{}
-%       Mentor new graduate students in the department.
-%     \end{rentry}
-
-%     \begin{rentry}{Women's Outreach at VMware}{}
-%       Organized and led events to recruit and support women in
-%       computer science programs around the country.
-%     \end{rentry}    
-%   \end{rsection}
-% \end{rtable}
 \end{document}
