adding msr to cv and corrections to blog post

--- a/_posts/2015-1-22-msr.md
+++ b/_posts/2015-1-22-msr.md
@@ -3,8 +3,8 @@ layout: post
 shortnews: true
 ---
 
-MSR has just named me a 2015 [Research
-Ph.D. Fellow](http://research.microsoft.com/en-us/collaboration/global/northam/northam-fellows.aspx). Thanks
+Microsoft Research has just named me a 2015
+[Ph.D. Fellow](http://research.microsoft.com/en-us/collaboration/global/northam/northam-fellows.aspx). Thanks
 to Microsoft for their support of Ph.D. students! As usual, Ed has
 more to say on the [CSE
 news](https://news.cs.washington.edu/2015/01/22/lilian-de-greef-and-irene-zhang-win-microsoft-research-ph-d-fellowships/).
