--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -323,6 +323,9 @@
   \end{rsection}
 
   \begin{rsection}{Honors \&\\Awards}
+    \begin{rentry}{Microsoft Research PhD Fellowship}{2015}
+    \end{rentry} \vspace{-0.5em}
+
     \begin{rentry}{Industrial Affiliates Madrona Prize}{2014}
     \end{rentry} \vspace{-0.5em}
 
