updating some stuff in blog post

--- a/_posts/2015-04-02-tapir.md
+++ b/_posts/2015-04-02-tapir.md
@@ -9,26 +9,26 @@ thought I would try to distill what I have learned from the project.
 
 ### 1. Replication protocols should be co-designed with the systems that use them, *not* applications.
 
-Applications do not often use replication protocols directly; instead,
-they are packaged into a fault-tolerant service or storage system. For
-example, banking applications do not use Paxos but use replicated
-databases. As Mike Burrows at Google notes [1], there are a lot of
-reasons to put Paxos into a lock server and present it as a service,
-rather than package it as a library.  With this in mind, we should be
+Applications do not commonly use replication protocols directly today;
+instead, they are usually packaged into a fault-tolerant service or
+storage system.  As Mike Burrows notes [1], there are a lot of reasons
+to put Paxos into a lock server and present it as a service, rather
+than package it as a library.  With this in mind, we should be
 designing replication protocols for distributed systems, not
 applications.
 
-Existing replication protocols are designed largely for applications,
-so are often not super useful for distributed systems. For example,
-eventual consistency protocols expect the application to resolve
-conflicts after they happen, but a storage system using the protocol
-has no idea how to resolve a conflict in data given to it by an
-application.
+However, existing replication protocols are designed largely for
+applications, so are often not super useful for distributed
+systems. For example, eventual consistency protocols expect the
+application to resolve conflicts after they happen, but a storage
+system using the protocol has no idea how to resolve a conflict in
+data given to it by an application. Protocols for commutative
+operations, like Generalized Paxos [3] and EPaxos [4], have a similar
+problem.
 
 <!---
 Optimized replication protocols are often not super useful for
-distributed systems.  For example, protocols for commutative
-operations, like Generalized Paxos [3] and EPaxos [4], only work if
+distributed systems.  For example, protocols , only work if
 the the storage system *and* application have commutative
 operations. This means that system designer has to carefully design
 for commutativity and then count on the application programmer to do
@@ -54,14 +54,14 @@ What we found in the TAPIR project is that Paxos is *too* strong for
 some strong system guarantees and, as a result, is wasting work and
 performance for those systems.  For example, a lock server wants
 *mutual exclusion*, but Paxos provides a strict serial ordering of
-lock operations, which is unnecessary.
+lock operations.
 
-Even more notable, a transactional storage system wants strictly
+Even more interesting, a transactional storage system wants strictly
 serializable transactions, which requires a linearizable ordering of
 transaction but only requires a *partial* ordering of operations
 (because not all transactions touch all keys).  With some careful
-design in TAPIR, we are actually able to enforce a linearizable
-ordering of transactions with *no* ordering of operations.
+design in TAPIR, we are able to enforce a linearizable ordering of
+transactions with *no* ordering of operations.
 
 
 ### 3. We can still provide the same strong guarantees to applications without consistency!
@@ -85,7 +85,7 @@ system guarantees that are pair-wise.  For example, we can build a
 lock server that provides mutual exclusion but not a store that only
 sells thing that are in stock.
 
-### 4. Good clock synchronization is widely available and we should use it.
+### 4. Good clock synchronization is available and we should use it.
 
 Without ordering in the replication layer, TAPIR needs another way to
 efficiently order transactions, so it uses loosely synchronized clocks
@@ -133,7 +133,8 @@ guarantees, Paxos is too strong and eventual consistency is too
 weak. Instead, we have designed inconsistent replication, a new
 replication protocol that provides fault-tolerance without consistency
 for distributed systems. Using IR and loosely synchronized clocks,
-TAPIR is able to provide high-performance distributed transactions.
+TAPIR is able to provide high-performance distributed transactions. To
+find out more, check out our tech report:
 
 - **[Building Consistent Transactions with Inconsistent Replication.]({{ site.base }}/papers/tapir-tr14.pdf)**   
 Irene Zhang, Naveen Kr. Sharma, Adriana Szekeres, Arvind Krishnamurthy, Dan R. K. Ports.   
