--- a/_posts/2015-04-02-tapir.md
+++ b/_posts/2015-04-02-tapir.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 shortnews: false
-title: Lessons learned about TAPIR(s)
+title: Lessons learned from TAPIR(s)
 ---
 
 Having just finished yet another iteration of the TAPIR paper, I
@@ -17,14 +17,15 @@ than package it as a library.  With this in mind, we should be
 designing replication protocols for distributed systems, not
 applications.
 
-However, existing replication protocols are designed largely for
-applications, so are often not super useful for distributed
-systems. For example, eventual consistency protocols expect the
-application to resolve conflicts after they happen, but a storage
-system using the protocol has no idea how to resolve a conflict in
-data given to it by an application. Protocols for commutative
+Unfortunately, many high-performance replication protocols are
+designed for applications, so are often not super useful for
+distributed systems. For example, eventual consistency protocols
+expect the application to resolve conflicts after they happen, but a
+storage system using the protocol has no idea how to resolve a
+conflict in data from an application (i.e., Dynamo [2] cannot resolve
+a conflict in the shopping cart). Protocols for commutative
 operations, like Generalized Paxos [3] and EPaxos [4], have a similar
-problem.
+problem (i.e., they do not know which application operations commute).
 
 <!---
 Optimized replication protocols are often not super useful for
@@ -54,7 +55,9 @@ What we found in the TAPIR project is that Paxos is *too* strong for
 some strong system guarantees and, as a result, is wasting work and
 performance for those systems.  For example, a lock server wants
 *mutual exclusion*, but Paxos provides a strict serial ordering of
-lock operations.
+lock operations. This means that a lock server built using Paxos for
+replication is coordinating across replicas even when it is not
+necessary to ensure mutual exclusion.
 
 Even more interesting, a transactional storage system wants strictly
 serializable transactions, which requires a linearizable ordering of
@@ -76,20 +79,21 @@ ordering.  Instead of an ordered operation log, IR provides an
 operations without a leader or any synchronous cross-replica
 coordination, similar to eventual consistency protocols.
 
-However, unlike eventual consistency, IR allows distributed systems to
+But, unlike eventual consistency, IR allows distributed systems to
 *avoid* conflicts before they happen, rather than resolving them after
 they happen. This allows systems retain strong guarantees for their
 applications and hide any inconsistencies from application
-programmers. Unlike strong consistency protocols, IR can only support
-system guarantees that are pair-wise.  For example, we can build a
-lock server that provides mutual exclusion but not a store that only
-sells thing that are in stock.
+programmers. IR's limitation is that it can only support system
+guarantees that are pair-wise.  For example, we can build a lock
+server that provides mutual exclusion but not a store that only sells
+thing that are in stock because calculating the store's stock requires
+a full history of operations that only strong consistency can achieve.
 
 ### 4. Good clock synchronization is available and we should use it.
 
 Without ordering in the replication layer, TAPIR needs another way to
 efficiently order transactions, so it uses loosely synchronized clocks
-for performance.  Throughout the project, we have continuously been
+for better performance.  Throughout the project, we have continuously been
 surprised by how good clock synchronization is on various
 platforms. In fact, we designed several extensions to TAPIR to cope
 with clock skew but never had to pull them out.
