updatings to tapir page

--- a/_posts/2015-04-02-tapir.md
+++ b/_posts/2015-04-02-tapir.md
@@ -5,9 +5,15 @@ title: Lessons learned from TAPIR(s)
 ---
 
 Having just finished yet another iteration of the TAPIR paper, I
-thought I would try to distill what I have learned from the project.
+thought I would try to distill what I have learned from the
+project. The photos of baby tapirs are completely gratuitous.
 
 ### 1. Replication protocols should be co-designed with the systems that use them, *not* applications.
+
+<div class="col-xs-4 pull-right">
+<img src="http://i.imgur.com/xJjwVhP.jpg" alt="Felix the tapir"
+      class="img-thumbnail">
+</div>
 
 Applications do not commonly use replication protocols directly today;
 instead, they are usually packaged into a fault-tolerant service or
@@ -23,7 +29,8 @@ distributed systems. For example, eventual consistency protocols
 expect the application to resolve conflicts after they happen, but a
 storage system using the protocol has no idea how to resolve a
 conflict in data from an application (i.e., Dynamo [2] cannot resolve
-a conflict in the shopping cart). Protocols for commutative
+a conflict in the Amazon shopping cart, which is why I always end up
+with two boxes of cereal from Amazon Fresh). Protocols for commutative
 operations, like Generalized Paxos [3] and EPaxos [4], have a similar
 problem (i.e., they do not know which application operations commute).
 
@@ -44,6 +51,11 @@ because it does not know how to do so in a general-purpose way.
 !-->
 
 ### 2. Paxos is too strict (and expensive) for a lot of systems.
+
+<div class="col-xs-4 pull-right">
+<img src="https://c2.staticflickr.com/6/5510/11690414524_4a2d975825_b.jpg" alt="Felix the tapir"
+      class="img-thumbnail">
+</div>
 
 Today, systems that want to provide strong guarantees use Paxos \[6\]
 (or, if you are hipper than me, RAFT [7]), and everyone else uses
@@ -69,6 +81,11 @@ transactions with *no* ordering of operations.
 
 ### 3. We can still provide the same strong guarantees to applications without consistency!
 
+<div class="col-xs-4 pull-right">
+<img src="http://37.media.tumblr.com/2d3ef9090bd30d760d621dfca6512a65/tumblr_mojh9fi4Ef1qd479ro1_500.jpg" alt="Felix the tapir"
+      class="img-thumbnail">
+</div>
+
 At the core of the TAPIR project is a new replication protocol, which
 we call *inconsistent replication* or IR, that provides
 fault-tolerance but no consistency.  IR is well-designed to provide
@@ -90,6 +107,11 @@ thing that are in stock because calculating the store's stock requires
 a full history of operations that only strong consistency can achieve.
 
 ### 4. Good clock synchronization is available and we should use it.
+
+<div class="col-xs-4 pull-right">
+<img src="https://c1.staticflickr.com/1/6/76059463_2ec021caa9.jpg" alt="Felix the tapir"
+      class="img-thumbnail">
+</div>
 
 Without ordering in the replication layer, TAPIR needs another way to
 efficiently order transactions, so it uses loosely synchronized clocks
@@ -119,30 +141,39 @@ Engine testbed.
 | Asia|  |     | 10.8   |       |   | .3 |
 !--->
 
+<!---
 ### 5. Tapirs are cute and baby tapirs are really cute.
-<div>
-<img src="http://caveviews.blogs.com/.a/6a00d8341bffd953ef017d4295b0d2970c-pi" alt="Felix the tapir"
-      class="img-responsive">
-<div>
 
 We have experimentally verified that tapirs are adorable. By looking
 at countless photos of baby tapirs in real-world conditions, we have
 measured 100% of baby tapirs to be extremely cute.
+!--->
 
 ### Summary
+
+<div class="col-xs-4 pull-right">
+<img src="http://caveviews.blogs.com/.a/6a00d8341bffd953ef017d4295b0d2970c-pi" alt="Felix the tapir"
+      class="img-thumbnail">
+</div>
 
 We should design better replication protocols optimized for
 distributed systems, not applications. For a class of strong system
 guarantees, Paxos is too strong and eventual consistency is too
-weak. Instead, we have designed inconsistent replication, a new
+weak. Instead, we have designed *inconsistent replication*, a new
 replication protocol that provides fault-tolerance without consistency
 for distributed systems. Using IR and loosely synchronized clocks,
-TAPIR is able to provide high-performance distributed transactions. To
-find out more, check out our tech report:
+TAPIR is able to provide high-performance distributed transactions.
 
+We have experimentally verified that baby tapirs are adorable. By
+looking at countless photos of baby tapirs in real-world conditions,
+we have measured 100% of baby tapirs to be extremely cute.
+
+<!---
+To find out more, check out our tech report:
 - **[Building Consistent Transactions with Inconsistent Replication.]({{ site.base }}/papers/tapir-tr14.pdf)**   
 Irene Zhang, Naveen Kr. Sharma, Adriana Szekeres, Arvind Krishnamurthy, Dan R. K. Ports.   
 UW Technical Report UW-CSE-14-12-01.
+!--->
 
 ### References
 
