--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -271,10 +271,10 @@
     Arvind Krishnamurthy. \textit{Building Consistent Transactions with Inconsistent
       Replication.}\\\vspace{-0.5em}
     
-    Adriana Szekeres, \textbf{Irene Zhang}, Isaac Ackerman, Franziska Roesner,
-    Dan R. K. Ports, Arvind Krishnamurthy, Henry M. Levy. \textit{User-controlled
-      Privacy: Enforcing Privacy Policies on Mobile/Cloud
-      Applications.}\\\vspace{-0.5em}
+    Adriana Szekeres, \textbf{Irene Zhang}, Katelin Bailey, Isaac
+    Ackerman, Haichen Shen, Franziska Roesner, Dan R. K. Ports, Arvind
+    Krishnamurthy, Henry M. Levy. \textit{Operating Systems Support
+      for User-controlled Privacy.}\\\vspace{-0.5em}
   \end{rsection}
   
   \begin{rsection}{Workshop Publications}
@@ -312,6 +312,9 @@
 \begin{rtable}
   \begin{rsection}{Awards}
 
+    \begin{rentry}{Google Anita Borg Memorial Fellowship}{2015}
+      \vspace{-0.5em}
+    \end{rentry} 
     \begin{rentry}{Microsoft Research PhD Fellowship}{2015}
       \vspace{-0.5em}
     \end{rentry} 
