--- a/_posts/2015-03-22-i-am-cse.md
+++ b/_posts/2015-03-22-i-am-cse.md
@@ -3,8 +3,10 @@ layout: post
 shortnews: true
 ---
 
+<div class="col-xs-4 pull-right">
 <img src="{{ site.base }}/img/Zhang_I-Am-CSE.png" alt="I am CSE photo"
-       class="pull-right">
+       class="img-thumbnail">
+</div>
 
 UW CSE has created a series of short videos showcasing research in the
 department and, apparently, I am CSE!  Learn more from Ed at the [CSE
